--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "AI-powered safety monitoring system for tourists - Dashboard Application",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://piyushkumar0707.github.io/tourism-dashboard-final",
   "dependencies": {
     "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -24,7 +24,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md}"
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md}",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +57,7 @@
     "ajv-keywords": "^3.5.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.36.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.4.17"
